# NexusQuant

./: .gitignore  copy_code_to_temp.py  visualize_structure.py  组织结构.md
backend/: pyproject.toml  quant_assistant.db  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api_v1.py
backend/app/api/v1/endpoints/: backtesting_lab.py  dashboard.py  exit_strategies.py  selection_strategies.py  timing_strategies.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/models/: backtesting.py  exit.py  strategy.py  timing.py
backend/app/services/: backtesting_service.py  exit_service.py  strategy_service.py  timing_service.py  tushare_client.py
backend/app/strategies/: base_strategy.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: main.js
frontend/src/api/: index.js
frontend/src/components/layout/: AppLayout.vue  Sidebar.vue
frontend/src/router/: index.js
frontend/src/views/: DashboardView.vue
frontend/src/views/backtesting/: BacktestingLabView.vue
frontend/src/views/exit/: ExitEngineView.vue
frontend/src/views/selection/: SelectionEngineView.vue
frontend/src/views/timing/: TimingEngineView.vue
