[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.76.123",
    "fastapi>=0.90.0",
    "matplotlib>=3.0.0",
    "pandas>=1.3.0",
    "pydantic>=1.10.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.41",
    "ta-lib==0.6.3", # 注意，我在这里添加了具体版本
    "tushare>=1.2.80",
    "uvicorn[standard]>=0.20.0",
]

# 如果你需要指定包索引源，请使用以下格式：
# [tool.uv.sources]
# url = "https://pypi.org/simple/"
# ...